# relayflow

./: .gitignore  AGENTS.md  PROJECT.md  README.md  pyproject.toml
docs/: development-flow.md  vision.md
openspec/: config.yaml
openspec/changes/archive/2026-06-18-initial-project-shape/: design.md  (+2 more)
openspec/changes/durable-graph-scheduler/: proposal.md  tasks.md
openspec/changes/executor-graph-node/: proposal.md  tasks.md
openspec/changes/graph-observability/: proposal.md  tasks.md
openspec/changes/initial-project-shape/: tasks.md
openspec/changes/opencode-executor/: tasks.md
openspec/changes/relevant-context-policy/: tasks.md
openspec/changes/session-graph/: proposal.md  tasks.md
openspec/changes/triggerlane-bridge/: design.md  tasks.md
openspec/specs/artifact-system/: spec.md
openspec/specs/context-firewall/: spec.md
openspec/specs/durable-scheduler/: spec.md
openspec/specs/opencode-executor/: spec.md
openspec/specs/relay-falsification/: spec.md
openspec/specs/session-graph/: spec.md
openspec/specs/session-runtime/: spec.md
openspec/specs/triggerlane-bridge/: spec.md
src/relayflow/: __init__.py  artifact.py  broker.py  cli.py  demo.py  events.py  executor.py  falsification.py  firewall.py  graph.py  graphstore.py  llm.py  session.py  tokens.py
tests/: test_artifact.py  test_broker.py  test_cli.py  test_e2e.py  test_events.py  test_executor.py  test_falsification.py  test_firewall.py  test_graph.py  test_graph_execution.py  test_graph_observability.py  test_graphstore.py  test_relevant_policy.py  test_scheduler.py  test_session.py
(+24 files in other folders)
